--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,68 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .App {
-  font-family: sans-serif;
-  text-align: center;
+    font-family: sans-serif;
+    text-align: center;
+    background-color: #a1ecff;
+    min-height: 100vh;
+}
+.header {
+    padding: 1rem;
+    background-color: #77139b;
+    color:honeydew;
+    font-size: 1.4rem;
+}
+
+.card { 
+    padding: 1rem;
+    margin: 1.5%;
+    background-color: rgba(70, 157, 255, 0.664);
+    border: solid 1px rgba(242, 240, 248, 0.63);
+    border-radius: 5px;
+    -webkit-box-shadow: 2px 2px 2px 2px #249FB3;
+    box-shadow: 2px 2px 2px 2px #2dc7df;   
+}
+
+.collection {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.errorMessage {
+    color: rgb(241, 25, 25);
+    background-color: rgb(255, 180, 94);
+    font-size: 2rem;
+    font-weight: 800;
+    margin: 2rem 2rem;
+    padding: 2rem;
+    border: 2px dashed brown;
+    border-radius: 1.5rem;
+
+}
+
+.loadingMessage {
+    color: rgb(98, 87, 255);
+    background-color: rgb(102, 252, 71);
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: 200;
+    margin: 2rem 2rem;
+    padding: 2rem;
+    border: 2px dashed #bbff00;
+    border-radius: 1.5rem;
+
+}
+
+.infoUser {
+    display: inline-block;
+    line-height: 2rem;
+    margin: auto 1rem;
+}
+h1 {
+    border-bottom: 1px solid rgb(156, 219, 255);
 }
