--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@
 .collection {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .errorMessage {
@@ -59,7 +59,6 @@
 }
 
 .infoUser {
-    display: inline-block;
     line-height: 2rem;
     margin: auto 1rem;
 }
